--- a/WebContent/WEB-INF/view/platform/partner/add.html
+++ b/WebContent/WEB-INF/view/platform/partner/add.html
@@ -29,9 +29,10 @@
 					<div class="form-group">
 						<div class="col-sm-2 col-sm-offset-3">
 							<% if(authUrl("/jf/platform/partner/save")){ %>
-								<button type="button" class="btn btn-red" onclick="platform_verify.formValiSubmit(this.form);">
+								<button type="button" class="btn btn-red" onclick="platform_partner_form.submitValiFunc(this.form,true);">
 									${i18nMap["admin.common.submit"]}	<i class="fa fa-arrow-circle-right"></i>
 								</button>
+								
 							<% } %>
 						</div>
 					</div>
