--- a/WebContent/WEB-INF/view/platform/partner/view.html
+++ b/WebContent/WEB-INF/view/platform/partner/view.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-  null
+  null  ${escapeXml(partner.phone!)} ${partner.phone!}    ${partner.phone}
 </body>
 </html>
