--- a/WebContent/WEB-INF/view/platform/partner/list.html
+++ b/WebContent/WEB-INF/view/platform/partner/list.html
@@ -131,7 +131,7 @@
 									</td>
 									<td class="hidden-xs">
 										<% if(view == true){ %>
-											<button type="button" class="btn btn-dark-yellow add-row" onclick="common_ajax.ajaxMainPanel('/jf/platform/partner/view/${escapeXml(partner.phone!)}');">
+											<button type="button" class="btn btn-dark-yellow add-row" onclick="common_ajax.ajaxMainPanel('/jf/platform/partner/view/${escapeXml(partner['phone']!)}');">
 												${i18nMap["admin.common.see"]} <i class="fa fa-eye"></i>
 											</button>
 										<% } %>
