--- a/WebContent/WEB-INF/view/platform/partner/view.html
+++ b/WebContent/WEB-INF/view/platform/partner/view.html
@@ -1,10 +1,65 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-  null  ${escapeXml(partner.phone!)} ${partner.phone!}    ${partner.phone}
-</body>
-</html>
+
+<div class="row">
+	<div class="col-md-12">
+		<ol class="breadcrumb">
+			<li><a href="#" onclick="common_ajax.ajaxMainPanel('/jf/platform/index/content');">首页</a></li>
+			<li><a href="#" onclick="common_ajax.ajaxMainPanel('/jf/platform/partner');">股东列表</a></li>
+			<li class="active">${i18nMap["admin.partner.view"]}</li>
+		</ol>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-12">
+		<!-- start: BORDERED TABLE PANEL -->
+		<div class="panel panel-white">
+			
+			<div class="panel-heading">
+				<h4 class="panel-title"><span class="text-bold">查看股东注册信息</span></h4>
+				<div class="panel-tools">										
+					<% include("/common/panel-tools.html"){} %>
+				</div>
+			</div>
+			
+			<div class="panel-body">	
+				<form role="form" class="form-horizontal">
+					
+					<div class="form-group">
+						<label class="col-sm-2 control-label">真实姓名</label>
+						<div class="col-sm-7">
+							<input type="text" class="form-control" readonly="readonly" value="${escapeXml(partner.realname!)}">
+						</div>
+					</div>
+					
+					<div class="form-group">
+						<label class="col-sm-2 control-label">手机号</label>
+						<div class="col-sm-7">
+							<input type="text" class="form-control" readonly="readonly" value="${escapeXml(partner.phone!)}">
+						</div>
+					</div>
+					<% if(memberProfile!=null){%>
+					<div class="form-group">
+						<label class="col-sm-2 control-label">用户id</label>
+						<div class="col-sm-7">
+							<input type="text" class="form-control" readonly="readonly" value="${escapeXml(memberProfile.uid!)}">
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-2 control-label">注册用户名</label>
+						<div class="col-sm-7">
+							<input type="text" class="form-control" readonly="readonly" value="${escapeXml(members.username!)}">
+						</div>
+					</div>
+					<%} else{%>
+					
+					  用户尚未注册！！
+					<%}%>
+				</form>
+			</div>
+		
+		</div>
+	</div>
+</div>	
+
+					
+				
