--- a/WebContent/WEB-INF/view/platform/partner/form.html
+++ b/WebContent/WEB-INF/view/platform/partner/form.html
@@ -1,15 +1,18 @@
-	<script type="text/javascript">
+<script type="text/javascript">
 	function submi(){
 	document.getElementById("partner.rechargegold").value = document.getElementById("partner.jnb_balance").value;
 	}
-	</script>
+</script>
+	
+	
+	
 <div class="form-group">
 	<label class="col-sm-2 control-label">手机号</label>
 	<div class="col-sm-7">
 		<input type="text" id="phone" name="partner.phone" value="${escapeXml(partner.phone!)}" 
-			class="form-control" maxlength="11" vMin="1" vType="phone" onblur="platform_verify.onblurVali(this);">
+			class="form-control" maxlength="20" vMin="1" vType="number" onblur="platform_verify.onblurVali(this);">
 	</div>
-	<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i> 11位数字 </span>
+	<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i> 请输入手机号 </span>
 </div>
 
 <div class="form-group">
@@ -25,13 +28,17 @@
 	<label class="col-sm-2 control-label">金额</label>
 	<div class="col-sm-7">
 		<input type="text" name="partner.jnb_balance"  id="partner.jnb_balance" value="${escapeXml(partner.jnb_balance!)}" 
-			class="form-control" maxlength="25"   vMin="3" vType="floatZ" onblur="submi();">
+			class="form-control" maxlength="20"   vMin="1" vType="floatZ" onblur="submi();">
 	</div>
 	<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i>输入金额 </span>
 	<input type="hidden" name="partner.rechargegold" id="partner.rechargegold"  vMin="4" class="form-control"  value="${escapeXml(partner.jnb_balance!)}"/>
 
 </div>
+
+
 <script type="text/javascript" src="${cxt!}/jsFile/rapido/platform/partner/form.js"></script>	
+
+
 <script type="text/javascript">
 	jQuery(document).ready(function() {
 		common_form.init();
