--- a/WebContent/WEB-INF/view/platform/order/update.html
+++ b/WebContent/WEB-INF/view/platform/order/update.html
@@ -3,7 +3,7 @@
 		<ol class="breadcrumb">
 			<li><a href="#" onclick="common_ajax.ajaxMainPanel('/jf/platform/index/content');">主页</a></li>
 			<li><a href="#" onclick="common_ajax.ajaxMainPanel('/jf/platform/order');">商品订单列表</a></li>
-			<li class="active">确认发货</li>
+			<li class="active">发货</li>
 		</ol>
 	</div>
 </div>
@@ -14,7 +14,7 @@
 		<div class="panel panel-white">
 			
 			<div class="panel-heading">
-				<h4 class="panel-title"><span class="text-bold">确认发货</span></h4>
+				<h4 class="panel-title"><span class="text-bold">发货</span></h4>
 				<div class="panel-tools">										
 					<% include("/common/panel-tools.html"){} %>
 				</div>
