--- a/WebContent/WEB-INF/view/platform/payflow/view.html
+++ b/WebContent/WEB-INF/view/platform/payflow/view.html
@@ -46,14 +46,14 @@
 					</div>
 										
 					<div class="form-group">
-						<label class="col-sm-2 control-label">总数</label>
+						<label class="col-sm-2 control-label">总额</label>
 						<div class="col-sm-7">
 							<input type="text" class="form-control" readonly="readonly" value="${escapeXml(payFlow.amount!)}">
 						</div>
 					</div>
 					
 					<div class="form-group">
-						<label class="col-sm-2 control-label">货币</label>
+						<label class="col-sm-2 control-label">币种</label>
 						<div class="col-sm-7">
 							<input type="text" class="form-control" readonly="readonly" value="${escapeXml(payFlow.currency!)}">
 						</div>
@@ -154,14 +154,14 @@
 					<!-- *******************************我是一条分割线********************************** -->		
 					
 					<div class="form-group">
-						<label class="col-sm-2 control-label">买家 ID</label>
+						<label class="col-sm-2 control-label">买家 编号</label>
 						<div class="col-sm-7">
 							<input type="text" class="form-control" readonly="readonly" value="${escapeXml(payFlow.buyerid!)}">
 						</div>
 					</div>
 																	
 					<div class="form-group">
-						<label class="col-sm-2 control-label">卖家ID</label>
+						<label class="col-sm-2 control-label">卖家编号</label>
 						<div class="col-sm-7">
 							<input type="text" class="form-control" readonly="readonly" value="${escapeXml(payFlow.sellerid!)}">
 						</div>
