--- a/WebContent/WEB-INF/view/platform/partnertrade/list.html
+++ b/WebContent/WEB-INF/view/platform/partnertrade/list.html
@@ -30,12 +30,13 @@
 						</div>
 				  	</div>
 				  	
-				  	<!-- <div class="form-group">
-						<label class="col-sm-2 control-label" for="focusedInput">商家名字</label>
+				  	<div class="form-group">
+						<label class="col-sm-2 control-label" for="focusedInput">卖家名字</label>
 						<div class="col-sm-4">
-					  		<input class="form-control focused" type="text" name="_query.publisher_name" value='${escapeXml(paramMap["_query.publisher_name"])}' maxlength="50" >
+					  		<input class="form-control focused" type="text" name="_query.seller_name" value='${escapeXml(paramMap["_query.seller_name"])}' maxlength="38" >
 						</div>
-				  	</div> -->
+				  	</div>
+				  	
 				  	
 				  	<div class="form-group">
 						<label class="col-sm-2 control-label" for="focusedInput">状态</label>
@@ -54,7 +55,7 @@
 							<select name="_query.goods_type" class="combox">
 								<option value="">全部</option>
 								<option value="1" ${paramMap["_query.goods_type"]! == "1" ? "selected='selected'":"" }>美食</option>
-								<option value="2" ${paramMap["_query.goods_type"]! == "-1" ? "selected='selected'":"" }>好书</option>
+								<option value="2" ${paramMap["_query.goods_type"]! == "2" ? "selected='selected'":"" }>好书</option>
 							</select>
 						</div>
 				  	</div>
