--- a/WebContent/WEB-INF/view/platform/payinfoconfig/update.html
+++ b/WebContent/WEB-INF/view/platform/payinfoconfig/update.html
@@ -102,7 +102,7 @@
 								</select>
 							<% } %>
 						</div>
-						<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i>请输入加密类型</span>
+						<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i>请选择加密类型</span>
 					</div>
 					
 					<div class="form-group">
@@ -237,16 +237,16 @@
 							<input type="text" id="pay_manner_name" name="payInfoConfig.pay_manner_name" value="${escapeXml(payInfoConfig.pay_manner_name!)}" 
 								class="form-control" maxlength="60">
 						</div>
-						<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i>请输入签名KEY</span>
+						<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i>请输入支付方式名字请输入签名KEY</span>
 					</div>
 							
 					<div class="form-group">
 						<label class="col-sm-2 control-label">扩展</label>
 						<div class="col-sm-5">
-							<input type="text" id="sign_key" name="payInfoConfig.sign_key" value="${escapeXml(payInfoConfig.sign_key!)}" 
+							<input type="text" id="sign_key" name="payInfoConfig.ext_param" value="${escapeXml(payInfoConfig.ext_param!)}" 
 								class="form-control" maxlength="65000">
 						</div>
-						<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i>请输入支付方式名字</span>
+						<span class="help-inline col-sm-2"> <i class="fa fa-info-circle"></i>请输入扩展</span>
 					</div>
 	<!-- *******************我是一条分割线****************** -->
 					
